# naive-fft-mlms

./: .gitignore  223  320_grid  64_grid  BenchMain.cpp  Boussinesq.cpp  Boussinesq.h  BoussinesqBind.cpp  BoussinesqCin.cpp  BoussinesqFft.cpp  BoussinesqFft.h  BoussinesqFftTimer.cpp  BoussinesqFftTimer.h  BoussinesqMain.cpp  BoussinesqMlms.cpp  BoussinesqMlms.h  BoussinesqMlmsTimer.cpp  BoussinesqMlmsTimer.h  BoussinesqNaiveTimer.cpp  BoussinesqTest.cpp  LICENSE  MLMSMain.cpp  Mlms.cpp  Mlms.h  MlmsFastTimer.cpp  MlmsFastTimer.h  MlmsMain.cpp  MlmsMain.s  MlmsNaive.cpp  MlmsNaive.s  MlmsNaiveM.cpp  MlmsNaiveMain  MlmsNaiveMain.cpp  MlmsNaiveTest  MlmsNaiveTest.cpp  MlmsTest.cpp  MlmsTimer.cpp  MlmsTimer.h  MlmsTimer.s  MlmsWriteToFile.cpp  (+16 more)
bench/: BenchMain  BenchMain.cpp  Boussinesq.cpp  Boussinesq.hh  BoussinesqFft.cpp  BoussinesqFft.h  BoussinesqMain  BoussinesqMain.cpp  BoussinesqMatrix.hh  BoussinesqMlms.cpp  BoussinesqMlms.h  Mlms.cpp  Mlms.h  MlmsNaive.cpp  compile  flags  makefile  out  output  output_fft  output_fft_8  output_mlms1  output_mlms1_t2  output_mlms2  output_mlms2_t2
bench/not needed/: Boussinesq1.cpp  Boussinesq1.hh  BoussinesqMatrix1.hh  BoussinesqMlms1.cpp  BoussinesqMlms1.hh
bench/temp/: BoussinesqMlms.cpp  callgrind.out.52192
conception/: 2do  BK.rnote  bk2.rnote  calculations_naive.wxmx  cheatsheet_eigen  function_list  mlms.graphml  pdf  projects.xopp  talk
eigen_test/: EigenMain.cpp
fftw/fftw-3.3.10/: Makefile  config.h  config.status  libtool
fftw/fftw-3.3.10/api/: Makefile
fftw/fftw-3.3.10/dft/: Makefile
fftw/fftw-3.3.10/dft/scalar/: Makefile
fftw/fftw-3.3.10/dft/scalar/codelets/: Makefile
fftw/fftw-3.3.10/dft/simd/: Makefile
fftw/fftw-3.3.10/dft/simd/altivec/: Makefile
fftw/fftw-3.3.10/dft/simd/avx/: Makefile
fftw/fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
fftw/fftw-3.3.10/dft/simd/avx2/: Makefile
fftw/fftw-3.3.10/dft/simd/avx2-128/: Makefile
fftw/fftw-3.3.10/dft/simd/avx512/: Makefile
fftw/fftw-3.3.10/dft/simd/avx512/.deps/: genus.Plo  n1bv_10.Plo  n1bv_11.Plo  n1bv_12.Plo  n1bv_128.Plo  n1bv_13.Plo  n1bv_14.Plo  n1bv_15.Plo  n1bv_16.Plo  n1bv_2.Plo  n1bv_20.Plo  n1bv_25.Plo  n1bv_3.Plo  n1bv_32.Plo  n1bv_4.Plo  (+156 more)
fftw/fftw-3.3.10/dft/simd/common/: Makefile
fftw/fftw-3.3.10/dft/simd/generic-simd128/: Makefile
fftw/fftw-3.3.10/dft/simd/generic-simd256/: Makefile
fftw/fftw-3.3.10/dft/simd/kcvi/: Makefile
fftw/fftw-3.3.10/dft/simd/neon/: Makefile
fftw/fftw-3.3.10/dft/simd/sse2/: Makefile
fftw/fftw-3.3.10/dft/simd/vsx/: Makefile
fftw/fftw-3.3.10/doc/: Makefile
fftw/fftw-3.3.10/doc/FAQ/: Makefile
fftw/fftw-3.3.10/genfft/: Makefile
fftw/fftw-3.3.10/kernel/: Makefile
fftw/fftw-3.3.10/libbench2/: Makefile
fftw/fftw-3.3.10/m4/: Makefile
fftw/fftw-3.3.10/mpi/: Makefile
fftw/fftw-3.3.10/rdft/: Makefile
fftw/fftw-3.3.10/rdft/scalar/: Makefile
fftw/fftw-3.3.10/rdft/scalar/r2cb/: Makefile
fftw/fftw-3.3.10/rdft/scalar/r2cf/: Makefile
fftw/fftw-3.3.10/rdft/scalar/r2r/: Makefile
fftw/fftw-3.3.10/rdft/simd/: Makefile
fftw/fftw-3.3.10/rdft/simd/altivec/: Makefile
fftw/fftw-3.3.10/rdft/simd/avx/: Makefile
fftw/fftw-3.3.10/rdft/simd/avx-128-fma/: Makefile
fftw/fftw-3.3.10/rdft/simd/avx2/: Makefile
fftw/fftw-3.3.10/rdft/simd/avx2-128/: Makefile
fftw/fftw-3.3.10/rdft/simd/avx512/: Makefile
fftw/fftw-3.3.10/rdft/simd/common/: Makefile
fftw/fftw-3.3.10/rdft/simd/generic-simd128/: Makefile
fftw/fftw-3.3.10/rdft/simd/generic-simd256/: Makefile
fftw/fftw-3.3.10/rdft/simd/kcvi/: Makefile
fftw/fftw-3.3.10/rdft/simd/neon/: Makefile
fftw/fftw-3.3.10/rdft/simd/sse2/: Makefile
fftw/fftw-3.3.10/rdft/simd/vsx/: Makefile
fftw/fftw-3.3.10/reodft/: Makefile
fftw/fftw-3.3.10/simd-support/: Makefile
fftw/fftw-3.3.10/simd-support/.deps/: avx512.Plo
fftw/fftw-3.3.10/support/: Makefile
fftw/fftw-3.3.10/tests/: Makefile  bench
fftw/fftw-3.3.10/threads/: Makefile
fftw/fftw-3.3.10/tools/: Makefile  fftw-wisdom
headers/: Boussinesq.h  BoussinesqFft.h  BoussinesqMlms.h  BoussinesqTimer.h  Ccg.h  meson.build
lukas/: BenchMain.cpp  BoussinesqM.cpp  BoussinesqMain  BoussinesqMain.cpp  BoussinesqMlms.cpp  makefile
old_files/: BoussinesqMlmsTimer.bkp  BoussinesqNaiveTimer.bkp  timings_parallelized2.txt
old_files/lukas/: Boussinesq.cpp  BoussinesqMlms.hh  makefile
old_files/lukas/unused/: BenchMain.cpp
results/: 100_grid  120_grid  140_grid  160_grid  180_grid  220_grid  240_grid  340_grid  360_grid  380_grid  400_grid  40_grid  60_grid  BTest64  BTest64_naive  branches_bars.py  coarsened_17  ds  fastestGrid  fft_sphere  finePressure  grid_faster  grid_faster_512  mean  mean2  mlms15  mlms29  mlms35  mlms41  mlms53  mlms57  output_Mlms1  output_Mlms2  output_fft  output_fft_8  output_mlms1  output_mlms1_t2  output_mlms2  output_mlms2_t2  percentage_pie.py  (+12 more)
results/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  plotResults-checkpoint.ipynb
results/gmn_test/: gmn15  gmn29  gmn35  gmn41  gmn53  gmn57
results/naive_timings/: timings_home.txt
results/old grid sizes/: 120_grid  200_grid  20_grid  220_grid  240_grid  260_grid  280_grid  300_grid  420_grid  440_grid  460_grid  480_grid  80_grid  grid_faster
results/res_pre/: mlms16  mlms20  mlms24  mlms32  mlms38  mlms48
src/: Boussinesq.cpp  BoussinesqBind.cpp  BoussinesqFft.cpp  BoussinesqMlms.cpp  Ccg.cpp  Untitled.ipynb  Utils.cpp  ccg.ipynb  mask  mufft.ipynb  residual2  sphere  wewe.ipynb  x0
testfolder/: Boussinesq.cpp  Ccg.cpp  test.cpp  test2.cpp
tests/: cC_132  cC_137  cC_141.000000  cC_17  cC_17.000000  cC_20.000000  cC_21  cC_21.000000  cC_26.000000  cC_268.000000  cC_28  cC_29  cC_29.000000  cC_39.000000  cC_43  cC_44  cC_45.000000  cC_73  cC_75  cC_77.000000  c_displacement  cc1  cc2  coarse_corr_matrix14  coarse_corr_matrix15  coarse_corr_matrix16  coarse_corr_matrix17  coarse_corr_matrix21  coarse_corr_matrix29  coarse_corr_matrix37  coarse_corr_matrix44  coarse_corr_matrix60  coarse_corr_matrix75  coarse_grid107  coarse_grid14  coarse_grid15  coarse_grid17  coarse_grid19  coarse_grid21  coarse_grid29  (+60 more)
(+402 files in other folders)
